tests/lean/nonAtomicFieldName.lean.expected.out
nonAtomicFieldName.lean:2:2-2:5: error: Invalid field name `a.b`: Field names must be atomic
